Handle missing anchor positions for BubbleBorder bounds calculation

Bug: 918516
Change-Id: Id97aac57ef7e4bc64e312712068d8500f1d2f4e2
Reviewed-on: https://chromium-review.googlesource.com/c/1386432
Commit-Queue: Tomasz Moniuszko <tmoniuszko@opera.com>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619602}
Former-commit-id: 5499c0794054577e184a73245e0f435e219e5cdb